@@ -44,13 +44,19 @@
 
 	/* Macros: */
 		/** Endpoint number of the TMC device-to-host data IN endpoint. */
-		#define TMC_IN_EPNUM          3	
+		#define TMC_IN_EPNUM            3	
 
 		/** Endpoint number of the TMC host-to-device data OUT endpoint. */
-		#define TMC_OUT_EPNUM         4	
+		#define TMC_OUT_EPNUM           4	
+
+		/** Endpoint number of the TMC notification IN endpoint. */
+		#define TMC_NOTIFICATION_EPNUM  2	
 
 		/** Size in bytes of the TMC data endpoints. */
-		#define TMC_IO_EPSIZE         64
+		#define TMC_IO_EPSIZE           64
+
+		/** Size in bytes of the TMC notification endpoint. */
+		#define TMC_NOTIFICATION_EPSIZE 8
 
 	/* Type Defines: */
 		/** Type define for the device configuration descriptor structure. This must be defined in the
@@ -63,6 +69,7 @@
 			USB_Descriptor_Interface_t            Interface;
 			USB_Descriptor_Endpoint_t             DataOutEndpoint;
 			USB_Descriptor_Endpoint_t             DataInEndpoint;
+			USB_Descriptor_Endpoint_t             NotificationEndpoint;
 		} USB_Descriptor_Configuration_t;
 
 	/* Function Prototypes: */
